Fixed the alignment of the cities in the world clock

--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ header label {
   text-align: center;
 }
 header .cities-list {
-  width: 90%;
+  width: 95%;
   padding: 10px 15px;
   display: block;
   margin: 0 auto 10px;
@@ -59,7 +59,7 @@ main .each-city-remove-button button {
   font-weight: 700;
   font-size: 18px;
   position: relative;
-  top: 17px;
+  top: 10px;
   left: 10px;
   transition: all 200ms ease-in-out;
 }
@@ -73,11 +73,15 @@ main .each-city {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px dashed #938fa1;
-  padding: 20px;
+  padding: 20px 20px 43px;
 }
 main .each-city:last-child {
   border-bottom: none;
-  padding-bottom: 0px;
+  padding-bottom: 10px;
+}
+main .each-city-central-box {
+  position: absolute;
+  left: 730px;
 }
 main .each-city-name {
   font-size: 32px;
@@ -90,7 +94,7 @@ main .each-city-date {
 main .each-city-time {
   font-size: 48px;
   position: relative;
-  right: 6px;
+  right: 8px;
 }
 footer {
   text-align: center;
